# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_runtime/js_runtime_config.gni")
import("//arkcompiler/ets_runtime/test/test_helper.gni")

module_output_path = "ets_runtime/ets_runtime"

host_unittest_action("Common_Snapshot_Test1") {
  module_out_path = module_output_path

  sources = [
    "common_snapshot_test.cpp",
  ]

  configs = [
    "../../:asm_interp_enable_config",
    "../../:ecma_test_config",
  ]

  deps = [ "../../:libark_jsruntime_test" ]

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  external_deps += [
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "runtime_core:libarkassembler_static",
    "runtime_core:libarkverifier",
    "zlib:libz",
  ]
  deps += hiviewdfx_deps
}

host_unittest_action("Common_Snapshot_Test2") {
  module_out_path = module_output_path

  sources = [
    "common_snapshot_test2.cpp",
  ]

  configs = [
    "../../:asm_interp_enable_config",
    "../../:ecma_test_config",
  ]

  deps = [ "../../:libark_jsruntime_test" ]

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  external_deps += [
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "runtime_core:libarkassembler_static",
    "runtime_core:libarkverifier",
    "zlib:libz",
  ]
  deps += hiviewdfx_deps
}

host_unittest_action("Common_Snapshot_Test3") {
  module_out_path = module_output_path

  sources = [
    "common_snapshot_test3.cpp",
  ]

  configs = [
    "../../:asm_interp_enable_config",
    "../../:ecma_test_config",
  ]

  deps = [ "../../:libark_jsruntime_test" ]

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  external_deps += [
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "runtime_core:libarkassembler_static",
    "runtime_core:libarkverifier",
    "zlib:libz",
  ]
  deps += hiviewdfx_deps
}

group("unittest") {
  testonly = true

  # deps file
  deps = [
    ":Common_Snapshot_Test1",
    ":Common_Snapshot_Test2",
    ":Common_Snapshot_Test3",
  ]
}

group("host_unittest") {
  testonly = true

  # deps file
  deps = [
    ":Common_Snapshot_Test1Action",
    ":Common_Snapshot_Test2Action",
    ":Common_Snapshot_Test3Action",
  ]
}
