# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "arraybufferrefnew_fuzzer:fuzztest",
    "arraybufferrefnewwithtwoparameters_fuzzer:fuzztest",
    "bigint64arrayrefnew_fuzzer:fuzztest",
    "biginttoint64_fuzzer:fuzztest",
    "biginttouint64_fuzzer:fuzztest",
    "biguint64arrayrefnew_fuzzer:fuzztest",
    "booleanrefnewbool_fuzzer:fuzztest",
    "buildnativeandJsstacktrace_fuzzer:fuzztest",
    "createbigwords_fuzzer:fuzztest",
    "dataviewrefnew_fuzzer:fuzztest",
    "daterefnew_fuzzer:fuzztest",
    "dispatchprotocolmessage_fuzzer:fuzztest",
    "dumpheapsnapshot1_fuzzer:fuzztest",
    "dumpheapsnapshot2_fuzzer:fuzztest",
    "execute_fuzzer:fuzztest",
    "float32arrayrefnew_fuzzer:fuzztest",
    "float64arrayrefnew_fuzzer:fuzztest",
    "functionrefcall_fuzzer:fuzztest",
    "functionrefconstructor_fuzzer:fuzztest",
    "functionrefnew_fuzzer:fuzztest",
    "functionrefnewclassfunction_fuzzer:fuzztest",
    "getnativepointerfield_fuzzer:fuzztest",
    "getwordsarray_fuzzer:fuzztest",
    "initializedebugger_fuzzer:fuzztest",
    "int16arrayrefnew_fuzzer:fuzztest",
    "int32arrayrefnew_fuzzer:fuzztest",
    "int8arrayrefnew_fuzzer:fuzztest",
    "jsnapisethostpromiserejectiontracker_fuzzer:fuzztest",
    "jsnapisethostresolvepathtracker_fuzzer:fuzztest",
    "jsnapistartdebugger_fuzzer:fuzztest",
    "nativepointernew1_fuzzer:fuzztest",
    "nativepointernew2_fuzzer:fuzztest",
    "newbigintbyint64_fuzzer:fuzztest",
    "newbigintbyuint64_fuzzer:fuzztest",
    "numberrefnewdouble_fuzzer:fuzztest",
    "numberrefnewint32_fuzzer:fuzztest",
    "numberrefnewint64_fuzzer:fuzztest",
    "numberrefnewuint32_fuzzer:fuzztest",
    "objectdelete_fuzzer:fuzztest",
    "objectget_fuzzer:fuzztest",
    "objecthas_fuzzer:fuzztest",
    "objectset_fuzzer:fuzztest",
    "setnativepointerfield_fuzzer:fuzztest",
    "startcpuprofilerforfile_fuzzer:fuzztest",
    "stopheaptracking1_fuzzer:fuzztest",
    "uint16arrayrefnew_fuzzer:fuzztest",
    "uint32arrayrefnew_fuzzer:fuzztest",
    "uint8arrayrefnew_fuzzer:fuzztest",
    "uint8clampedarrayrefnew_fuzzer:fuzztest",
  ]
}
