# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "arraybufferrefnew_fuzzer:fuzztest",
    "arraybufferrefnewwithtwoparameters_fuzzer:fuzztest",
    "bigint64arrayrefnew_fuzzer:fuzztest",
    "biginttoint64_fuzzer:fuzztest",
    "biginttouint64_fuzzer:fuzztest",
    "biguint64arrayrefnew_fuzzer:fuzztest",
    "booleanrefnewbool_fuzzer:fuzztest",
    "buildnativeandJsstacktrace_fuzzer:fuzztest",
    "containershashmap_fuzzer:fuzztest",
    "containershashmapclear_fuzzer:fuzztest",
    "containershashmapentries_fuzzer:fuzztest",
    "containershashmapforeach_fuzzer:fuzztest",
    "containershashmapget_fuzzer:fuzztest",
    "containershashmapgetlength_fuzzer:fuzztest",
    "containershashmaphaskey_fuzzer:fuzztest",
    "containershashmaphasvalue_fuzzer:fuzztest",
    "containershashmapisempty_fuzzer:fuzztest",
    "containershashmapkeys_fuzzer:fuzztest",
    "containershashmapremove_fuzzer:fuzztest",
    "containershashmapreplace_fuzzer:fuzztest",
    "containershashmapset_fuzzer:fuzztest",
    "containershashmapsetall_fuzzer:fuzztest",
    "containershashmapvalues_fuzzer:fuzztest",
    "containershashsetadd_fuzzer:fuzztest",
    "containershashsetclear_fuzzer:fuzztest",
    "containershashsetconstructor_fuzzer:fuzztest",
    "containershashsetentries_fuzzer:fuzztest",
    "containershashsetforeach_fuzzer:fuzztest",
    "containershashsetgetlength_fuzzer:fuzztest",
    "containershashsethas_fuzzer:fuzztest",
    "containershashsetisempty_fuzzer:fuzztest",
    "containershashsetremove_fuzzer:fuzztest",
    "containershashsetvalues_fuzzer:fuzztest",
    "containerslinkedlistadd_fuzzer:fuzztest",
    "containerslinkedlistaddfirst_fuzzer:fuzztest",
    "containerslinkedlistclear_fuzzer:fuzztest",
    "containerslinkedlistclone_fuzzer:fuzztest",
    "containerslinkedlistconverttoarray_fuzzer:fuzztest",
    "containerslinkedlistforeach_fuzzer:fuzztest",
    "containerslinkedlistget_fuzzer:fuzztest",
    "containerslinkedlistgetfirst_fuzzer:fuzztest",
    "containerslinkedlistgetindexof_fuzzer:fuzztest",
    "containerslinkedlistgetiteratorobj_fuzzer:fuzztest",
    "containerslinkedlistgetlast_fuzzer:fuzztest",
    "containerslinkedlistgetlastindexof_fuzzer:fuzztest",
    "containerslinkedlisthas_fuzzer:fuzztest",
    "containerslinkedlistinsert_fuzzer:fuzztest",
    "containerslinkedlistlength_fuzzer:fuzztest",
    "containerslinkedlistremove_fuzzer:fuzztest",
    "containerslinkedlistremovebyindex_fuzzer:fuzztest",
    "containerslinkedlistremovefirst_fuzzer:fuzztest",
    "containerslinkedlistremovefirstfound_fuzzer:fuzztest",
    "containerslinkedlistremovelast_fuzzer:fuzztest",
    "containerslinkedlistremovelastfound_fuzzer:fuzztest",
    "containerslinkedlistset_fuzzer:fuzztest",
    "containersplainarray_fuzzer:fuzztest",
    "containersprivatearraylist_fuzzer:fuzztest",
    "containersprivatedeque_fuzzer:fuzztest",
    "containersprivatehashmap_fuzzer:fuzztest",
    "containersprivatehashset_fuzzer:fuzztest",
    "containersprivatelightweightmap_fuzzer:fuzztest",
    "containersprivatelightweightset_fuzzer:fuzztest",
    "containersprivatelinkedlist_fuzzer:fuzztest",
    "containersprivatelist_fuzzer:fuzztest",
    "containersprivateload_fuzzer:fuzztest",
    "containersprivateplainarray_fuzzer:fuzztest",
    "containersprivatequeue_fuzzer:fuzztest",
    "containersprivatestack_fuzzer:fuzztest",
    "containersprivatetreemap_fuzzer:fuzztest",
    "containersprivatetreeset_fuzzer:fuzztest",
    "containersprivatevector_fuzzer:fuzztest",
    "createbigwords_fuzzer:fuzztest",
    "dataviewrefnew_fuzzer:fuzztest",
    "daterefnew_fuzzer:fuzztest",
    "dumpheapsnapshot1_fuzzer:fuzztest",
    "dumpheapsnapshot2_fuzzer:fuzztest",
    "dumpheapsnapshot3_fuzzer:fuzztest",
    "execute_fuzzer:fuzztest",
    "float32arrayrefnew_fuzzer:fuzztest",
    "float64arrayrefnew_fuzzer:fuzztest",
    "functionrefcall_fuzzer:fuzztest",
    "functionrefconstructor_fuzzer:fuzztest",
    "functionrefnew_fuzzer:fuzztest",
    "functionrefnewclassfunction_fuzzer:fuzztest",
    "getnativepointerfield_fuzzer:fuzztest",
    "getwordsarray_fuzzer:fuzztest",
    "int16arrayrefnew_fuzzer:fuzztest",
    "int32arrayrefnew_fuzzer:fuzztest",
    "int8arrayrefnew_fuzzer:fuzztest",
    "jsnapideleteserializationdata_fuzzer:fuzztest",
    "jsnapideserializevalue_fuzzer:fuzztest",
    "jsnapisethostpromiserejectiontracker_fuzzer:fuzztest",
    "jsnapisethostresolvepathtracker_fuzzer:fuzztest",
    "jsnapistartdebugger_fuzzer:fuzztest",
    "jsonparse_fuzzer:fuzztest",
    "jsonstringify_fuzzer:fuzztest",
    "nativepointernew1_fuzzer:fuzztest",
    "nativepointernew2_fuzzer:fuzztest",
    "newbigintbyint64_fuzzer:fuzztest",
    "newbigintbyuint64_fuzzer:fuzztest",
    "numberrefnewdouble_fuzzer:fuzztest",
    "numberrefnewint32_fuzzer:fuzztest",
    "numberrefnewint64_fuzzer:fuzztest",
    "numberrefnewuint32_fuzzer:fuzztest",
    "objectdelete_fuzzer:fuzztest",
    "objectget_fuzzer:fuzztest",
    "objecthas_fuzzer:fuzztest",
    "objectset_fuzzer:fuzztest",
    "setnativepointerfield_fuzzer:fuzztest",
    "setnativepointerfieldcount_fuzzer:fuzztest",
    "startcpuprofilerforfile_fuzzer:fuzztest",
    "startheaptracking_fuzzer:fuzztest",
    "stopheaptracking1_fuzzer:fuzztest",
    "stopheaptracking2_fuzzer:fuzztest",
    "stringrefnewfromutf8_fuzzer:fuzztest",
    "stringrefwriteutf8_fuzzer:fuzztest",
    "uint16arrayrefnew_fuzzer:fuzztest",
    "uint32arrayrefnew_fuzzer:fuzztest",
    "uint8arrayrefnew_fuzzer:fuzztest",
    "uint8clampedarrayrefnew_fuzzer:fuzztest",
  ]
}
